Fixed the vertical alignment of the logo

--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,10 @@ ul li {
     color: #fff;
 }
 
+.nav-logo {
+    line-height: 35px;
+}
+
 ul li a,
 .footer span {
 	font-family: 'Raleway', sans-serif;
